# qbalance

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: lint.yml  macos.yml  ubuntu.yml  windows.yml
examples/: 01_quickstart.ipynb  02_artifacts.ipynb  advanced_workflow.py  end_to_end_artifacts.py  quickstart.py
src/qbalance/: __init__.py  __main__.py  _version.py  builtin_data.py  cache.py  cli.py  dataset.py  errors.py  logging.py  objectives.py  plugins.py  strategies.py  utils.py
src/qbalance/backends/: __init__.py  aer.py  fake.py  resolver.py
src/qbalance/benchmarking/: __init__.py  matrix.py
src/qbalance/cutting/: __init__.py  addon_cutting.py
src/qbalance/diagnostics/: __init__.py  distribution.py
src/qbalance/execution/: __init__.py  runner.py
src/qbalance/metrics/: __init__.py  circuit_metrics.py
src/qbalance/mitigation/: __init__.py  mthree.py  runtime_options.py  zne.py
src/qbalance/reports/: __init__.py  common.py  html.py  markdown.py
src/qbalance/search/: __init__.py  bandit.py  candidates.py  pareto.py
src/qbalance/transpile/: __init__.py  noise_aware_layout.py  pipeline.py  profiling.py  suppression.py
src/qbalance/workflow/: __init__.py  workload.py
tests/: __init__.py  system_stubs.py  test_cli_workload_branches.py  test_dataset.py  test_distribution.py  test_execution_runner.py  test_full_coverage_paths.py  test_mitigation_mthree_zne.py  test_objectives_search_runtime.py  test_reports_generation.py  test_support_modules.py  test_transpile_pipeline.py  test_workload_matrix_cli.py
